add title degrade

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       </address>
     </header>
     <main>
-      <section class="title">
+        <div class="title">
         <h1>Effective Solutions <br> for Your Business</h1>
         <button class="button" type="button">Order Service</button>
-      </section>
+    </div>
       <ul class="mainideas container">
         <li>
           <svg width="264" height="112" xlmns="http://www.w3.org/2000/svg">
