--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@
       <section class="footericons">
         <p>Social media</p>
         <div class="icons">
-            <img src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
-            <img src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
-            <img src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
-            <img src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
+            <img src="images/icons.svg/instagram1optimized.svg" alt="instagram icon"/>
+            <img src="images/icons.svg/twitter1optimized.svg" alt="twitter icon"/>
+            <img src="images/icons.svg/facebook1optimized.svg" alt="facebook icon"/>
+            <img src="images/icons.svg/in1optimized.svg" alt="linked in icon"/>
         </div>
       </section>
     </footer>
