delte address underline

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li>
           <svg width="264" height="112" xlmns="http://www.w3.org/2000/svg">
             <rect class="rect" width="263.5" height="111.5" rx="4" ry="4" style="fill:#F4F4FD;stroke-width:1;stroke:#8E8F99"/>
-            <use class="rectitem" x="102.14" y="24" href="images/icons.svg/antenna.svg" />
+            <use class="rectitem" x="102.14" y="24" href="images/icons.svg/antenna-optimized.svg" />
           </svg>
           <h3>Strategy</h3>
           <p>
@@ -64,7 +64,7 @@
         <li>
           <svg width="264" height="112" xlmns="http://www.w3.org/2000/svg">
             <rect class="rect" width="263.5" height="111.5" rx="4" ry="4" style="fill:#F4F4FD;stroke-width:1;stroke:#8E8F99"/>
-            <use class="rectitem" x="102.14" y="24" href="images/icons.svg/clock.svg" />
+            <use class="rectitem" x="102.14" y="24" href="images/icons.svg/clock-optimized.svg" />
           </svg>
           <h3>Punctuality</h3>
           <p>
@@ -75,7 +75,7 @@
         <li>
           <svg width="264" height="112" xlmns="http://www.w3.org/2000/svg">
             <rect class="rect" width="263.5" height="111.5" rx="4" ry="4" style="fill:#F4F4FD;stroke-width:1;stroke:#8E8F99"/>
-            <use class="rectitem" x="102.14" y="24" href="images/icons.svg/diagram.svg" />
+            <use class="rectitem" x="102.14" y="24" href="images/icons.svg/diagram-optimized.svg" />
           </svg>
           <h3>Diligence</h3>
           <p>
@@ -86,7 +86,7 @@
         <li>
           <svg width="264" height="112" xlmns="http://www.w3.org/2000/svg">
             <rect class="rect" width="263.5" height="111.5" rx="4" ry="4" style="fill:#F4F4FD;stroke-width:1;stroke:#8E8F99"/>
-            <use class="rectitem" x="102.14" y="24" href="images/icons.svg/astronaut.svg" />
+            <use class="rectitem" x="102.14" y="24" href="images/icons.svg/astronaut-optimized.svg" />
           </svg>
           <h3>Technologies</h3>
           <p>
