--- a/index.html
+++ b/index.html
@@ -173,58 +173,99 @@
       <ul>
         <div class="row1">
         <li>
+          <div class="imagewrapper">
           <img
             src="images/banking-app-optimized.jpg"
             alt="banking app photo"
             width="360"
           />
+          <div class="overlay">
+            <p>
+              14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+            </p>
+          </div>
+          </div>
           <h3>Banking App</h3>
           <p>App</p>
         </li>
         <li>
+          <div class="imagewrapper">
           <img
             src="images/cashless-payment-optimized.jpg"
             alt="cashless payment photo"
-            width="360"
-          />
+            width="360"/>
+          <div class="overlay">
+            <p>
+              14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+            </p>
+          </div>
+          </div>
           <h3>Cashless Payment</h3>
           <p>Marketing</p>
         </li>
         <li>
+          <div class="imagewrapper">
           <img
             src="images/meditation-app-optimized.jpg"
             alt="meditation app photo"
             width="360"
           />
+          <div class="overlay">
+            <p>
+              14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+            </p>
+          </div>
+          </div>
           <h3>Meditation App</h3>
           <p>App</p>
         </li>
         </div>
         <div class="row2">
         <li>
+          <div class="imagewrapper">
           <img
             src="images/taxi-service-optimized.jpg"
             alt="taxi service photo"
             width="360"
           />
+          <div class="overlay">
+            <p>
+              14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+            </p>
+          </div>
+          </div>
           <h3>Taxi Service</h3>
           <p>Marketing</p>
         </li>
         <li>
+          <div class="imagewrapper">
           <img
             src="images/screen-illustrations-optimized.jpg"
             alt="screen illustrations photo"
             width="360"
           />
+          <div class="overlay">
+            <p>
+              14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+            </p>
+          </div>
+          </div>
           <h3>Screen Illustrations</h3>
           <p>Design</p>
         </li>
         <li>
+          <div class="imagewrapper">
           <img
             src="images/online-courses-optimized.jpg"
             alt="online courses photo"
             width="360"
           />
+          <div class="overlay">
+            <p>
+              14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+            </p>
+          </div>
+          </div>
           <h3>Online Courses</h3>
           <p>Marketing</p>
         </li>
