--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="container">
       <div class="logomenu">
       <div><a class="web" href="#">WEB</a><a class="studio" href="#">STUDIO</a></div>
       <nav>
