--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <div class="container">
     <header class="container">
       <div class="logomenu">
       <div><a class="web" href="#">WEB</a><a class="studio" href="#">STUDIO</a></div>
@@ -108,7 +109,7 @@
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
             <div class="icons">
-            <img src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
+            <img class="instagram" src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
             <img src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
             <img src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
             <img src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
@@ -170,6 +171,7 @@
       </section>
       <section class="ourportfolio container">
       <h2>Our Portfolio</h2>
+      <div class="row1a2">
       <ul>
         <div class="row1">
         <li>
@@ -271,6 +273,7 @@
         </li>
         </div>
       </ul>
+      </div>
     </div>
     </main>
     <footer>
@@ -294,5 +297,6 @@
         </div>
       </section>
     </footer>
+    </div>
   </body>
 </html>
