add icons hover

--- a/index.html
+++ b/index.html
@@ -109,10 +109,22 @@
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
             <div class="icons">
+              <div class="images">
             <img class="instagram" src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
-            <img src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
-            <img src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
-            <img src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
+            <img class="instagram1" src="images/icons.svg/instagramhoveroptimized.svg" alt="instagram icon"/>
+            </div>
+            <div class="images">
+            <img class="twitter" src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
+            <img class="twitter1" src="images/icons.svg/twitterhoveroptimized.svg" alt="twitter icon"/>
+            </div>
+            <div class="images">
+            <img class="facebook" src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
+            <img class="facebook1" src="images/icons.svg/facebookhoveroptimized.svg" alt="facebook icon"/>
+            </div>
+            <div class="images">
+            <img class="linkedin" src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
+            <img class="linkedin1" src="images/icons.svg/inhoveroptimized.svg" alt="linked in icon"/>
+            </div>
             </div>
             </div>
           </li>
@@ -125,11 +137,23 @@
             <div class="ourteamcontent">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
-            <div class="icons">
-            <img src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
-            <img src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
-            <img src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
-            <img src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
+                        <div class="icons">
+              <div class="images">
+            <img class="instagram" src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
+            <img class="instagram1" src="images/icons.svg/instagramhoveroptimized.svg" alt="instagram icon"/>
+            </div>
+            <div class="images">
+            <img class="twitter" src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
+            <img class="twitter1" src="images/icons.svg/twitterhoveroptimized.svg" alt="twitter icon"/>
+            </div>
+            <div class="images">
+            <img class="facebook" src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
+            <img class="facebook1" src="images/icons.svg/facebookhoveroptimized.svg" alt="facebook icon"/>
+            </div>
+            <div class="images">
+            <img class="linkedin" src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
+            <img class="linkedin1" src="images/icons.svg/inhoveroptimized.svg" alt="linked in icon"/>
+            </div>
             </div>
             </div>
           </li>
@@ -142,11 +166,23 @@
             <div class="ourteamcontent">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
-            <div class="icons">
-            <img src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
-            <img src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
-            <img src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
-            <img src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
+                        <div class="icons">
+              <div class="images">
+            <img class="instagram" src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
+            <img class="instagram1" src="images/icons.svg/instagramhoveroptimized.svg" alt="instagram icon"/>
+            </div>
+            <div class="images">
+            <img class="twitter" src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
+            <img class="twitter1" src="images/icons.svg/twitterhoveroptimized.svg" alt="twitter icon"/>
+            </div>
+            <div class="images">
+            <img class="facebook" src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
+            <img class="facebook1" src="images/icons.svg/facebookhoveroptimized.svg" alt="facebook icon"/>
+            </div>
+            <div class="images">
+            <img class="linkedin" src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
+            <img class="linkedin1" src="images/icons.svg/inhoveroptimized.svg" alt="linked in icon"/>
+            </div>
             </div>
             </div>
            </li>
@@ -159,11 +195,23 @@
             <div class="ourteamcontent">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
-            <div class="icons">
-            <img src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
-            <img src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
-            <img src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
-            <img src="images/icons.svg/instagram-optimized.svg" alt="linked in icon"/>
+                        <div class="icons">
+              <div class="images">
+            <img class="instagram" src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
+            <img class="instagram1" src="images/icons.svg/instagramhoveroptimized.svg" alt="instagram icon"/>
+            </div>
+            <div class="images">
+            <img class="twitter" src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
+            <img class="twitter1" src="images/icons.svg/twitterhoveroptimized.svg" alt="twitter icon"/>
+            </div>
+            <div class="images">
+            <img class="facebook" src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
+            <img class="facebook1" src="images/icons.svg/facebookhoveroptimized.svg" alt="facebook icon"/>
+            </div>
+            <div class="images">
+            <img class="linkedin" src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
+            <img class="linkedin1" src="images/icons.svg/inhoveroptimized.svg" alt="linked in icon"/>
+            </div>
             </div>
             </div>
           </li>
@@ -289,12 +337,25 @@
       </section>
       <section class="footericons">
         <p>Social media</p>
-        <div class="icons">
-            <img src="images/icons.svg/instagram1optimized.svg" alt="instagram icon"/>
-            <img src="images/icons.svg/twitter1optimized.svg" alt="twitter icon"/>
-            <img src="images/icons.svg/facebook1optimized.svg" alt="facebook icon"/>
-            <img src="images/icons.svg/in1optimized.svg" alt="linked in icon"/>
-        </div>
+                    <div class="icons">
+              <div class="images">
+            <img class="instagram" src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
+            <img class="instagram1" src="images/icons.svg/instagramhoveroptimized.svg" alt="instagram icon"/>
+            </div>
+            <div class="images">
+            <img class="twitter" src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
+            <img class="twitter1" src="images/icons.svg/twitterhoveroptimized.svg" alt="twitter icon"/>
+            </div>
+            <div class="images">
+            <img class="facebook" src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
+            <img class="facebook1" src="images/icons.svg/facebookhoveroptimized.svg" alt="facebook icon"/>
+            </div>
+            <div class="images">
+            <img class="linkedin" src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
+            <img class="linkedin1" src="images/icons.svg/inhoveroptimized.svg" alt="linked in icon"/>
+            </div>
+            </div>
+            </div>
       </section>
     </footer>
     </div>
