--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
     </div>
       <ul class="mainideas container">
         <li>
-          <svg width="264" height="112" xlmns="http://www.w3.org/2000/svg">
-            <rect class="rect" width="263.5" height="111.5" rx="4" ry="4" style="fill:#F4F4FD;stroke-width:1;stroke:#8E8F99"/>
-            <use class="rectitem" x="102.14" y="24" href="images/icons.svg/antenna-optimized.svg" />
-          </svg>
+          <div class="myicons"><svg class="icon icon-antenna"><use xlink:href="./images/symbol-defs.svg#icon-antenna"></use></svg></div>
           <h3>Strategy</h3>
           <p>
             Our goal is to identify the business problem to walk away with the
@@ -63,10 +60,7 @@
           </p>
         </li>
         <li>
-          <svg width="264" height="112" xlmns="http://www.w3.org/2000/svg">
-            <rect class="rect" width="263.5" height="111.5" rx="4" ry="4" style="fill:#F4F4FD;stroke-width:1;stroke:#8E8F99"/>
-            <use class="rectitem" x="102.14" y="24" href="images/icons.svg/clock-optimized.svg" />
-          </svg>
+          <div class="myicons"><svg class="icon icon-clock"><use xlink:href="./images/symbol-defs.svg#icon-clock"></use></svg></div>
           <h3>Punctuality</h3>
           <p>
             Bring the key message to the brand's audience for the best price
@@ -74,10 +68,7 @@
           </p>
         </li>
         <li>
-          <svg width="264" height="112" xlmns="http://www.w3.org/2000/svg">
-            <rect class="rect" width="263.5" height="111.5" rx="4" ry="4" style="fill:#F4F4FD;stroke-width:1;stroke:#8E8F99"/>
-            <use class="rectitem" x="102.14" y="24" href="images/icons.svg/diagram-optimized.svg" />
-          </svg>
+          <div class="myicons"><svg class="icon icon-diagram"><use xlink:href="./images/symbol-defs.svg#icon-diagram"></use></svg></div>
           <h3>Diligence</h3>
           <p>
             Research and confirm brands with the strongest digital growth
@@ -85,10 +76,7 @@
           </p>
         </li>
         <li>
-          <svg width="264" height="112" xlmns="http://www.w3.org/2000/svg">
-            <rect class="rect" width="263.5" height="111.5" rx="4" ry="4" style="fill:#F4F4FD;stroke-width:1;stroke:#8E8F99"/>
-            <use class="rectitem" x="102.14" y="24" href="images/icons.svg/astronaut-optimized.svg" />
-          </svg>
+          <div class="myicons"><svg class="icon icon-astronaut"><use xlink:href="./images/symbol-defs.svg#icon-astronaut"></use></svg></div>
           <h3>Technologies</h3>
           <p>
             Design practice focused on digital experiences. We bring forth a
@@ -99,7 +87,7 @@
       <section class="ourteam container">
         <h2>Our Team</h2>
         <ul>
-          <li>
+          <li class="ourteamcard">
             <img
               src="images/img1-optimized.jpg"
               alt="Portrait of Mark Guerrero, Product Designer"
@@ -109,26 +97,15 @@
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
             <div class="icons">
-              <div class="images">
-            <img class="instagram" src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
-            <img class="instagram1" src="images/icons.svg/instagramhoveroptimized.svg" alt="instagram icon"/>
-            </div>
-            <div class="images">
-            <img class="twitter" src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
-            <img class="twitter1" src="images/icons.svg/twitterhoveroptimized.svg" alt="twitter icon"/>
-            </div>
-            <div class="images">
-            <img class="facebook" src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
-            <img class="facebook1" src="images/icons.svg/facebookhoveroptimized.svg" alt="facebook icon"/>
-            </div>
-            <div class="images">
-            <img class="linkedin" src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
-            <img class="linkedin1" src="images/icons.svg/inhoveroptimized.svg" alt="linked in icon"/>
-            </div>
-            </div>
+            <ul class="socialmedia">
+            <li class="socialmediaitem"><svg class="icon icon-instagram"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-twitter"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-facebook"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-linkedin"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></li>
+            </ul>
             </div>
           </li>
-          <li>
+          <li class="ourteamcard">
             <img
               src="images/img2-optimized.jpg"
               alt="Portrait of Tom Ford, Frontend Developer"
@@ -137,27 +114,15 @@
             <div class="ourteamcontent">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
-                        <div class="icons">
-              <div class="images">
-            <img class="instagram" src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
-            <img class="instagram1" src="images/icons.svg/instagramhoveroptimized.svg" alt="instagram icon"/>
-            </div>
-            <div class="images">
-            <img class="twitter" src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
-            <img class="twitter1" src="images/icons.svg/twitterhoveroptimized.svg" alt="twitter icon"/>
-            </div>
-            <div class="images">
-            <img class="facebook" src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
-            <img class="facebook1" src="images/icons.svg/facebookhoveroptimized.svg" alt="facebook icon"/>
-            </div>
-            <div class="images">
-            <img class="linkedin" src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
-            <img class="linkedin1" src="images/icons.svg/inhoveroptimized.svg" alt="linked in icon"/>
-            </div>
-            </div>
+            <ul class="socialmedia">
+            <li class="socialmediaitem"><svg class="icon icon-instagram"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-twitter"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-facebook"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-linkedin"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></li>
+            </ul>
             </div>
           </li>
-          <li>
+          <li class="ourteamcard">
             <img
               src="images/img3-optimized.jpg"
               alt="Portrait of Camila Garcia, Marketing"
@@ -166,27 +131,15 @@
             <div class="ourteamcontent">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
-                        <div class="icons">
-              <div class="images">
-            <img class="instagram" src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
-            <img class="instagram1" src="images/icons.svg/instagramhoveroptimized.svg" alt="instagram icon"/>
-            </div>
-            <div class="images">
-            <img class="twitter" src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
-            <img class="twitter1" src="images/icons.svg/twitterhoveroptimized.svg" alt="twitter icon"/>
-            </div>
-            <div class="images">
-            <img class="facebook" src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
-            <img class="facebook1" src="images/icons.svg/facebookhoveroptimized.svg" alt="facebook icon"/>
-            </div>
-            <div class="images">
-            <img class="linkedin" src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
-            <img class="linkedin1" src="images/icons.svg/inhoveroptimized.svg" alt="linked in icon"/>
-            </div>
-            </div>
+            <ul class="socialmedia">
+            <li class="socialmediaitem"><svg class="icon icon-instagram"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-twitter"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-facebook"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-linkedin"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></li>
+            </ul>
             </div>
            </li>
-          <li>
+          <li class="ourteamcard">
             <img
               src="images/img4-optimized.jpg"
               alt="Portrait of Daniel Wilson, UI Designer"
@@ -195,24 +148,12 @@
             <div class="ourteamcontent">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
-                        <div class="icons">
-              <div class="images">
-            <img class="instagram" src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
-            <img class="instagram1" src="images/icons.svg/instagramhoveroptimized.svg" alt="instagram icon"/>
-            </div>
-            <div class="images">
-            <img class="twitter" src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
-            <img class="twitter1" src="images/icons.svg/twitterhoveroptimized.svg" alt="twitter icon"/>
-            </div>
-            <div class="images">
-            <img class="facebook" src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
-            <img class="facebook1" src="images/icons.svg/facebookhoveroptimized.svg" alt="facebook icon"/>
-            </div>
-            <div class="images">
-            <img class="linkedin" src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
-            <img class="linkedin1" src="images/icons.svg/inhoveroptimized.svg" alt="linked in icon"/>
-            </div>
-            </div>
+            <ul class="socialmedia">
+            <li class="socialmediaitem"><svg class="icon icon-instagram"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-twitter"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-facebook"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-linkedin"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></li>
+            </ul>
             </div>
           </li>
         </ul>
@@ -337,24 +278,12 @@
       </section>
       <section class="footericons">
         <p>Social media</p>
-                    <div class="icons">
-              <div class="images">
-            <img class="instagram" src="images/icons.svg/instagram-optimized.svg" alt="instagram icon"/>
-            <img class="instagram1" src="images/icons.svg/instagramhoveroptimized.svg" alt="instagram icon"/>
-            </div>
-            <div class="images">
-            <img class="twitter" src="images/icons.svg/twitter-optimized.svg" alt="twitter icon"/>
-            <img class="twitter1" src="images/icons.svg/twitterhoveroptimized.svg" alt="twitter icon"/>
-            </div>
-            <div class="images">
-            <img class="facebook" src="images/icons.svg/facebook-optimized.svg" alt="facebook icon"/>
-            <img class="facebook1" src="images/icons.svg/facebookhoveroptimized.svg" alt="facebook icon"/>
-            </div>
-            <div class="images">
-            <img class="linkedin" src="images/icons.svg/in-optimized.svg" alt="linked in icon"/>
-            <img class="linkedin1" src="images/icons.svg/inhoveroptimized.svg" alt="linked in icon"/>
-            </div>
-            </div>
+        <ul class="socialmedia">
+            <li class="socialmediaitem"><svg class="icon icon-instagram"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-twitter"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-facebook"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></li>
+            <li class="socialmediaitem"><svg class="icon icon-linkedin"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></li>
+            </ul>
             </div>
       </section>
     </footer>
