hopefully last draft

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <div class="container">
-    <header class="container">
+    <header>
       <div class="logomenu">
       <div><a class="web" href="#">WEB</a><a class="studio" href="#">STUDIO</a></div>
       <nav>
@@ -84,7 +84,7 @@
           </p>
         </li>
       </ul>
-      <section class="ourteam container">
+      <section class="ourteam">
         <h2>Our Team</h2>
         <ul>
           <li class="ourteamcard">
@@ -158,7 +158,7 @@
           </li>
         </ul>
       </section>
-      <section class="ourportfolio container">
+      <section class="ourportfolio">
       <h2>Our Portfolio</h2>
       <div class="row1a2">
       <ul>
